--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
  <h1 class="tobaco">Tobaco</h1>
     </div>
-    <input type="checkbox" id="opensidebarMenu">
+    <input type="checkbox" class="check" id="opensidebarMenu">
     <label for="opensidebarMenu" class="SidebarIconToggle">
        <div class="sprinter top"></div>
        <div class="sprinter middel"></div>
